# Sauron

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.claude/skills/error-mentor/: SKILL.md
.github/workflows/: github-actions.yml
dependency/: docker-compose.yml
dependency/init/: init.sql
environments/dev/: config.yaml
environments/local/: config.yaml
src/apis/: analyze.py  source_control.py
src/apis/models/: AnalyzeRequest.py  base_response_model.py  source_control.py
src/clients/: llm.py
src/clients/models/: llm_config.py
src/config/: __init__.py  settings.py
src/core/: database.py  job_worker.py  jwt_logic.py  scm_pem_cipher.py
src/factories/: analyze_job.py  source_control.py
src/repositories/: analyze_job_repository.py  analyze_job_result_repository.py  code_repository_repository.py  error_event_repository.py  scm_connection_repository.py
src/repositories/schemas/: analyze_job.py  analyze_job_result.py  code_repository.py  error_event.py  scm_connection.py
src/services/: agent_service.py  analyze_job_service.py  analyze_service.py  source_control_models.py  source_control_service.py
src/services/exceptions/: __init__.py  analyze_job_exception.py  app_base_error.py  source_control_exception.py
src/services/source_controlers/: base.py  github_source_control.py  gitlab_source_control.py
src/workflows/models/: base_context.py
src/workflows/templates/: __init__.py  sauron_agent_system_prompt.py
src/workflows/tools/: github_tools.py  source_control_tools.py
src/workflows/v1/: sauron_agent_v1.py
(+2 files in other folders)
